tests/golden/plugin_chunk_error.out
tests/golden/plugin_chunk_error.bean: [[31mError[0m] Failed to load plugin plugin_chunk_error: plugin_chunk_error.lua:3: boom at top level

    1 | plugin "plugin_chunk_error"
               [31m^^^^^^^^^^^^^^^^^^^^[0m

Assets
└ Cash
