tests/golden/plugin_chunk_error.bean
plugin "plugin_chunk_error"

2024-01-01 open Assets:Cash USD
